# OneAuth

./: .gitignore  Makefile  README.md  cfg.yml  go.mod  go.sum  main.go  vuf.md
api/: api.go
api/app/: app.go  router.go  user.go
api/auth/: auth.go  router.go
api/resource/: resource.go  router.go
api/role/: auth.go  role.go  roleAuth.go  router.go  user.go
api/token/: token.go
api/user/: user.go  user_role.go
api/wx/: login.go  router.go
cfg/: cfg.go
doc/: tsdb.md
file/: app.go  main.go  public.go  user.go
libs/app/: user.go
libs/auth/: auth.go  user_handler.go  user_key.go
libs/base/: api_handler.go  app_handler.go  user_handler.go
libs/fs/: file.go  fs.go
libs/key/: app.go  user.go
libs/oerr/: oerr.go
libs/token/: user.go
libs/tools/: tools.go
libs/webdav/: webdav.go  xml.go
models/: app.go  file.go  init.go  message.go  role.go  user.go
models/index/: index.go
oa/: .gitignore  Makefile  go.mod  go.sum  main.go
oa/api/: init.go
oa/api/access/: access.go  init.go
oa/api/app/: app.go  app_user.go  init.go  resource.go
oa/builtin/: init.go
oa/cfg/: cfg.go  db.go  nats.go
oa/errs/: errors.go  response.go
oa/etc/: main.yaml
oa/models/: access.gen.go  access.go  accessmodel.go  accessmodel_gen.go  app.gen.go  app.go  appmodel.go  appmodel_gen.go  appusermodel.go  appusermodel_gen.go  init.go  resourcemodel.go  resourcemodel_gen.go  role.gen.go  role.go  rolemodel.go  rolemodel_gen.go  token.gen.go  token.go  tokenmodel.go  tokenmodel_gen.go  user.gen.go  user.go  usermodel.go  usermodel_gen.go  userrolemodel.go  userrolemodel_gen.go  vars.go
oab/: Cargo.toml  Makefile  cfg-demo.yml
oab/migrations/: 20220720220617_base.sql
oab/proc/: Cargo.toml
oab/proc/src/: access.rs  crud.rs  curd.rs  lib.rs
oab/sql/: table.sql
oab/src/: cfg.rs  cli.rs  lib.rs  main.rs  result.rs  test.rs
oab/src/api/: access.rs  app.rs  appuser.rs  mod.rs  resource.rs  role.rs  token.rs  upload.rs  user.rs  userapp.rs
oab/src/cfg/: cfg.rs  mod.rs
oab/src/fs/: app.rs  mod.rs  usr.rs
oab/src/libs/: app.rs  auth.rs  cors.rs  fs.rs  mod.rs  proxy.rs  task.rs  user.rs
oab/src/models/: app.rs  app_plugin.rs  mod.rs  role.rs  user.rs  user_plugin.rs
oab/src/models/entity/: access.rs  app.rs  app_user.rs  mod.rs  prelude.rs  resource.rs  role.rs  sea_orm_active_enums.rs  user.rs  user_role.rs
oaer/: .gitignore  index.html  package.json  vite.config.ts
oaer/lib/: bus.ts  cfg.ts  main.ts
oaer/src/: main.ts  style.css
oaf/: .eslintignore  .eslintrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
oaf/public/: icon.js  index.html
oaf/src/: App.vue  main.ts  shims-vue.d.ts  vuex.d.ts
oaf2/: .eslintrc.js  README.md  package.json  vue.config.js
oaf2/public/: icon.js
oaf2/src/: App.vue
oafAdmin/: .prettierrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
oafAdmin/src/: App.vue  index.css  main.ts
oafLib/: package.json
oalib/: auth.go  config.go  main.go  payload.go
oaweb/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  app.config.ts  app.vue  error.vue  index.html  nuxt.config.ts  package-lock.json  package.json  quasar.config.js
oaweb/components/: app.vue  appcard.vue  crud.vue  menu.vue  tsdom.vue  tsgraph.vue  uploader.vue  vinput.vue
oaweb/composables/: auth.ts  index.ts  models.ts  state.ts  util.ts
oaweb/layouts/: default.vue
oaweb/pages/: docs.vue  index.vue  login.vue  setting.vue  stats.vue  user.vue
oaweb/src/: App.vue  cfg.ts
oaweb/stores/: menu.ts  user.ts
script/: nats.cfg  nats.yml
sub/: app.go  file.go  init.go  role.go  web.go
sub/static/: index.html
(+306 files in other folders)
