[package]
name = "oab"
version = "0.1.0"
edition = "2021"

# default-run = "web"
# [[bin]]
# name = "web"
# path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "*"
lazy_static = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "*"
serde_yaml = "*"
clap = { version = "3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures-util = "*"
tracing = "*"
tracing-subscriber = "*"
thiserror = "1.0"

sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"] }

sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql",
    "runtime-tokio-rustls", "macros",  "with-chrono",
    "with-json", "with-uuid" ] }


actix-web = "4"
actix-files = "0.6.2"
jsonwebtoken = "8"

aes-gcm="0.9"
rand = "0.8.5"
block-padding = "0.3.2"
generic-array = "0.14.5"
serde-big-array = "0.4.1"
base64 = "0.13.0"

uuid = { version = "1.1", features = ["v3","v4", "fast-rng", "macro-diagnostics"]}
serde_repr = "0.1.8"

proc = {path="proc"}
# dav-server = {version = "0.5.7", features = ["default","actix-compat"], path = "../../../test/dav-server-rs/" }
dav-server = {version = "0.5.7", features = ["default","actix-compat"]}
http = "0.2.9"
http-auth-basic = "0.3.3"
actix-multipart = "0.6.1"
actix-cors = "0.6.4"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
service-manager = "0.3.0"
async-nats = "0.32.1"
bytes = "1.5.0"
nkeys = "0.3.2"
tracing-appender = "0.2.2"
reqwest = "0.11.22"

